--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -44,7 +44,7 @@
 .footer-section-items {
     width: fit-content;
     margin-bottom: 5px;
-    color: #7b634d;
+    color: #645444;
     text-decoration: none;
     cursor: pointer;
 }
