--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body::-webkit-scrollbar {
 }
 
 :root {
-    --primary-color: #f5eee7;
+    --primary-color: #fff9ea;
     --secondary-color: #C3A46B;
     --tertiary-color: #e8a87c;
 
