--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -22,9 +22,9 @@
 }
 
 .footer-logo {
+    border-radius: 20px;
     height: auto;
-    width: 230px;
-    object-fit: contain;
+    width: 200px;
 }
 
 .footer-section {
