--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,6 +1,5 @@
 .hero-section {
-    margin-top: 70px;
-    height: calc(100vh - 70px);
+    height: 100vh;
     width: 100%;
     position: relative;
 }
@@ -11,6 +10,7 @@
     width: inherit;
     object-fit: cover;
     position: fixed;
+    animation: slowZoom 20s ease-in-out infinite;
 }
 
 .hero-img-cover {
@@ -20,6 +20,12 @@
     width: 100%;
     top: 0;
     background-color: rgba(90, 72, 46, 0.7);
+    background: linear-gradient(
+    to bottom,
+    rgba(38, 34, 28, 0.75),
+    rgba(38, 34, 28, 0.65),
+    rgba(38, 34, 28, 0.75)
+  );
 }
 
 .hero-content {
@@ -34,10 +40,12 @@
 }
 
 .hero-section-title {
-    font-family: 'Playfair Script', serif;
-    font-size: 120px;
-    font-weight: 800;
-    font-weight: bolder;
+    /* font-family: 'Poppins', serif; */
+    font-family: 'Allura', serif;
+    font-size: 150px;
+    font-weight: 400;
+    text-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    max-width: 1000px;
     color: white;
     text-align: center;
     line-height: 110px;
@@ -48,7 +56,7 @@
     margin-bottom: 40px;
     font-family: 'Poppins', sans-serif;
     font-size: 24px;
-    font-weight: 100;
+    font-weight: 200;
     color: #ffffff;
     text-align: center;
 }
@@ -64,7 +72,7 @@
     justify-content: space-between;
     gap: 8px;
     background-color: #C3A46B;
-    color: #7b634d;
+    color: #4b423b;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 600;
@@ -86,6 +94,7 @@
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 600;
+    text-align: center;
     padding: 12px 32px;
     border: 2px solid white;
     border-radius: 6px;
@@ -107,16 +116,32 @@
 
 @media(max-width:768px) {
     .hero-section-title {
-        font-size: 48px;
-        line-height: 52px;
+        font-size: 60px;
+        line-height: 50px;
+        margin-bottom: 30px;
+        font-weight: 400;
+        font-family: 'Allura', serif;
     }
 
     .hero-section-subtitle {
-        font-size: 18px;
+        font-size: 14px;
+        font-family: 'Poppins', serif;
+        color: white;
+        font-weight: 200;
     }
 
     .hero-section-btns {
         flex-direction: column;
         gap: 20px;
     }
+}
+
+
+@keyframes slowZoom {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
 }
